--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <ul>
     <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+    <li><a href="./recipes/goulash.html">Szegediner Goulash Recipe</a></li>
   </ul>
 
 </body>
