--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -43,8 +43,9 @@
     </li>
     <li>
       Dust with flour, add onions, salt, pepper, caraway, paprika, tomato paste (not tomatoes!) and the pressed garlic
-      cloves (note: the flour makes the frying mixture a bit mushy, don't worry, it will disappear completely and it
-      will be very creamy, just as the goulash should be).
+      cloves. <br>
+      (note: the flour makes the frying mixture a bit mushy, don't worry, it will disappear completely and it will be
+      very creamy, just as the goulash should be)
     </li>
     <li>
       When the flour is light brown, top up with vegetable stock.
