Add 3rd recipe and link to index.html
I added a third recipe for a tarte flambee.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <ul>
     <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
     <li><a href="./recipes/goulash.html">Szegediner Goulash Recipe</a></li>
+    <li><a href="./recipes/tarte-flambee.html">Tarte Flambée Recipe</a></li>
   </ul>
 
 </body>
