Add semantic formatting and containers
I put the contents into semantically meaningful
containers for better accessability and following
best practices.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 </head>
 
 <body>
-  <h1>Odin Recipes</h1>
 
-  <ul>
-    <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-    <li><a href="./recipes/goulash.html">Szegediner Goulash Recipe</a></li>
-    <li><a href="./recipes/tarte-flambee.html">Tarte Flambée Recipe</a></li>
-  </ul>
+  <header>
+    <h1>Odin Recipes</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+      <li><a href="./recipes/goulash.html">Szegediner Goulash Recipe</a></li>
+      <li><a href="./recipes/tarte-flambee.html">Tarte Flambée Recipe</a></li>
+    </ul>
+  </nav>
 
 </body>
 
