--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -8,58 +8,68 @@
 </head>
 
 <body>
-  <h1>Szegediner Goulash Recipe</h1>
+  <header>
+    <h1>Szegediner Goulash Recipe</h1>
 
 
-  <img src="../img/goulash-960x540.jpg" alt="Picture of Szegediner Goulash" width="960" height="540">
-  <h4>A spicy Hungarian tradition</h4>
+    <img src="../img/goulash-960x540.jpg" alt="Picture of Szegediner Goulash" width="960" height="540">
+    <h4>A spicy Hungarian tradition</h4>
 
-  <p>This is an easy recipe for a Hungarian classic</p>
+    <p>This is an easy recipe for a Hungarian classic</p>
+  </header>
 
-  <h2>Ingredients:</h2>
-  <ul>
-    <li>500g pork goulash, lean</li>
-    <li>30g lard or frying oil</li>
-    <li>30g flour</li>
-    <li>300g onions</li>
-    <li>1 tbsp. salt</li>
-    <li>half a tbsp. pepper</li>
-    <li>1 tbsp. cumin</li>
-    <li>2 tbsp. paprika powder</li>
-    <li>70g tomato paste</li>
-    <li>2 garlic gloves, pressed</li>
-    <li>200ml broth</li>
-    <li>300g sauerkraut</li>
-    <li>sour creme</li>
-    <li>yogurt if meat is very lean</li>
-  </ul>
+  <main>
+    <section>
+      <h2>Ingredients:</h2>
+      <ul>
+        <li>500g pork goulash, lean</li>
+        <li>30g lard or frying oil</li>
+        <li>30g flour</li>
+        <li>300g onions</li>
+        <li>1 tbsp. salt</li>
+        <li>half a tbsp. pepper</li>
+        <li>1 tbsp. cumin</li>
+        <li>2 tbsp. paprika powder</li>
+        <li>70g tomato paste</li>
+        <li>2 garlic gloves, pressed</li>
+        <li>200ml broth</li>
+        <li>300g sauerkraut</li>
+        <li>sour creme</li>
+        <li>yogurt if meat is very lean</li>
+      </ul>
+    </section>
 
-  <h2>Steps</h2>
+    <section>
+      <h2>Steps</h2>
 
-  <ol>
-    <li>
-      Fry the goulash in hot lard until it's nice and brown.
-    </li>
-    <li>
-      Dust with flour, add onions, salt, pepper, caraway, paprika, tomato paste (not tomatoes!) and the pressed garlic
-      cloves. <br>
-      (note: the flour makes the frying mixture a bit mushy, don't worry, it will disappear completely and it will be
-      very creamy, just as the goulash should be)
-    </li>
-    <li>
-      When the flour is light brown, top up with vegetable stock.
-    </li>
-    <li>
-      If the meat is very lean, add another 150 ml of yogurt!
-    </li>
-    <li>
-      Braise well, approx. 20 - 30 minutes.
-    </li>
-    <li>
-      Add the sauerkraut, stir well and braise for another 30 minutes.
-    </li>
-    <li>
-      To serve, add a little sour cream to the goulash.
-    </li>
-  </ol>
+      <ol>
+        <li>
+          Fry the goulash in hot lard until it's nice and brown.
+        </li>
+        <li>
+          Dust with flour, add onions, salt, pepper, caraway, paprika, tomato paste (not tomatoes!) and the pressed
+          garlic
+          cloves. <br>
+          (note: the flour makes the frying mixture a bit mushy, don't worry, it will disappear completely and it will
+          be
+          very creamy, just as the goulash should be)
+        </li>
+        <li>
+          When the flour is light brown, top up with vegetable stock.
+        </li>
+        <li>
+          If the meat is very lean, add another 150 ml of yogurt!
+        </li>
+        <li>
+          Braise well, approx. 20 - 30 minutes.
+        </li>
+        <li>
+          Add the sauerkraut, stir well and braise for another 30 minutes.
+        </li>
+        <li>
+          To serve, add a little sour cream to the goulash.
+        </li>
+      </ol>
+    </section>
+  </main>
 </body </html>
