--- a/recipes/tarte-flambee.html
+++ b/recipes/tarte-flambee.html
@@ -8,49 +8,57 @@
 </head>
 
 <body>
-  <h1>Tarte Flambée Recipe</h1>
+  <header>
+    <h1>Tarte Flambée Recipe</h1>
 
 
-  <img src="../img/tarte-flambee-1024x768.jpg" alt="Picture of Szegediner Goulash" width="1024" height="768">
-  <h4>A Alsatian specialty and classic</h4>
+    <img src="../img/tarte-flambee-1024x768.jpg" alt="Picture of Szegediner Goulash" width="1024" height="768">
+    <h4>A Alsatian specialty and classic</h4>
 
-  <p>This is an easy recipe for a classic Alsatian Tarte Flambée</p>
+    <p>This is an easy recipe for a classic Alsatian Tarte Flambée</p>
+  </header>
 
-  <h2>Ingredients:</h2>
-  <ul>
-    <li>440g flour</li>
-    <li>200ml water, lukewarm</li>
-    <li>2 egg yolk</li>
-    <li>6 tbsp. oil</li>
-    <li>1 tsp. salt</li>
-    <li>some flour for the work surface</li>
-    <li>some oil for brushing</li>
-    <li>sour creme</li>
-    <li>onions, cut in rings</li>
-    <li>bacon cubes</li>
-  </ul>
+  <main>
+    <section>
+      <h2>Ingredients:</h2>
+      <ul>
+        <li>440g flour</li>
+        <li>200ml water, lukewarm</li>
+        <li>2 egg yolk</li>
+        <li>6 tbsp. oil</li>
+        <li>1 tsp. salt</li>
+        <li>some flour for the work surface</li>
+        <li>some oil for brushing</li>
+        <li>sour creme</li>
+        <li>onions, cut in rings</li>
+        <li>bacon cubes</li>
+      </ul>
+    </section>
 
-  <h2>Steps</h2>
+    <section>
+      <h2>Steps</h2>
 
-  <ol>
-    <li>
-      First knead the ingredients together for five minutes with a hand mixer and then work them together briefly by
-      hand.
-    </li>
-    <li>
-      Then brush with a little oil and leave to rest wrapped in foil for about 30 minutes.
-    </li>
-    <li>
-      Roll out thinly on a lightly floured work surface and place on baking paper.
-    </li>
-    <li>
-      Place on a baking tray, spread sour creme on the surface and sprinkle with salt and pepper.
-    </li>
-    <li>
-      Top with onion rings and bacon cubes.
-    </li>
-    <li>
-      Bake in a preheated oven at 430 degrees, bottom rack, for about 10 - 15 minutes.
-    </li>
-  </ol>
+      <ol>
+        <li>
+          First knead the ingredients together for five minutes with a hand mixer and then work them together briefly by
+          hand.
+        </li>
+        <li>
+          Then brush with a little oil and leave to rest wrapped in foil for about 30 minutes.
+        </li>
+        <li>
+          Roll out thinly on a lightly floured work surface and place on baking paper.
+        </li>
+        <li>
+          Place on a baking tray, spread sour creme on the surface and sprinkle with salt and pepper.
+        </li>
+        <li>
+          Top with onion rings and bacon cubes.
+        </li>
+        <li>
+          Bake in a preheated oven at 430 degrees, bottom rack, for about 10 - 15 minutes.
+        </li>
+      </ol>
+    </section>
+  </main>
 </body </html>
