Add CSS styles to the website
I added some basic CSS styles to  the recipe
website and added a back-to-top and home link to
all of the recipe pages for a better navigation
experience.

--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipe Website</title>
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
 
-  <header>
+  <header id="top">
     <h1>Odin Recipes</h1>
   </header>
 
-  <nav>
-    <ul>
-      <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-      <li><a href="./recipes/goulash.html">Szegediner Goulash Recipe</a></li>
-      <li><a href="./recipes/tarte-flambee.html">Tarte Flambée Recipe</a></li>
-    </ul>
-  </nav>
+  <section>
+    <nav>
+      <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="./recipes/goulash.html">Szegediner Goulash Recipe</a></li>
+        <li><a href="./recipes/tarte-flambee.html">Tarte Flambée Recipe</a></li>
+      </ul>
+    </nav>
+  </section>
 
 </body>
 
