--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lasagna Recipe</title>
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
-  <header>
+  <header id="top">
     <h1>Lasagna Recipe</h1>
     <img src="../img/lasagna-600x528.jpg" alt="Picture of a Lasagna" width="600" height="528">
     <h4>The world's best Lasagna</h4>
@@ -110,4 +111,9 @@
       </ol>
     </section>
   </main>
+
+  <footer>
+    <a class="to-top" href="#top">&#8593;</a>
+    <a class="home" href="/">Home</a>
+  </footer>
 </body </html>
