--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Szegediner Goulash Recipe</title>
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
-  <header>
+  <header id="top">
     <h1>Szegediner Goulash Recipe</h1>
 
 
@@ -72,4 +73,9 @@
       </ol>
     </section>
   </main>
+
+  <footer>
+    <a class="to-top" href="#top">&#8593;</a>
+    <a class="home" href="/">Home</a>
+  </footer>
 </body </html>
