Fix broken home link

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -114,6 +114,6 @@
 
   <footer>
     <a class="to-top" href="#top">&#8593;</a>
-    <a class="home" href="/">Home</a>
+    <a class="home" href="../">Home</a>
   </footer>
 </body </html>
