Improve display on small screens
I improved upon the accessibility of the website
on small screens by assigning more appropriate box
models.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <section>
     <nav>
       <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="./recipes/goulash.html">Szegediner Goulash Recipe</a></li>
-        <li><a href="./recipes/tarte-flambee.html">Tarte Flambée Recipe</a></li>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/goulash.html">Szegediner Goulash</a></li>
+        <li><a href="./recipes/tarte-flambee.html">Tarte Flambée</a></li>
       </ul>
     </nav>
   </section>
