--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -20,7 +20,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="ingredients">
       <h2>Ingredients:</h2>
       <ul>
         <li>500g pork goulash, lean</li>
@@ -40,7 +40,7 @@
       </ul>
     </section>
 
-    <section>
+    <section class="steps">
       <h2>Steps</h2>
 
       <ol>
