--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -18,7 +18,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="ingredients">
       <h2>Ingredients:</h2>
 
       <h3>Ingredients for the bolognaise:</h3>
@@ -60,7 +60,7 @@
       </ul>
     </section>
 
-    <section>
+    <section class="steps">
       <h2>Steps</h2>
 
       <ol>
