--- a/recipes/tarte-flambee.html
+++ b/recipes/tarte-flambee.html
@@ -20,7 +20,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="ingredients">
       <h2>Ingredients:</h2>
       <ul>
         <li>440g flour</li>
@@ -36,7 +36,7 @@
       </ul>
     </section>
 
-    <section>
+    <section class="steps">
       <h2>Steps</h2>
 
       <ol>
